3.0.0 (TBD)
------------------
- add mosaic endpoints  (#17 author @geospatial-jeff)
- update to rio-tiler-crs 3.0b.1 (rio-tiler 2.0b2)
- STAC is now added by default because there is no need for external module.
- Pin fastapi version to 0.60.1
- Remove titiler.core in favor of starlette settings (#55, author @geospatial-jeff)
- Add fastapi exception handlers (#56, author @geospatial-jeff)
- Remove intermediary routers (#57, author @geospatial-jeff)
- Remove /titiler/api submodule (e.g titiler.api.utils -> titiler.utils)
- Add Cache-Control middleware. Endpoints do not define any cache-control headers. (part of #43, co-author with @geospatial-jeff)

2.1.2 (2020-06-24)
------------------
- add `width` & `height` parameters in API docs to force output size for part/preview endpoints.
- add `resampling_method` in API docs.

2.1.1 (2020-06-22)
------------------
- add minimum fastapi version (0.54.0) and update docker config

2.1.0 (2020-06-11)
------------------
- add `/preview`, `/crop`, `/point` endpoints

2.0.0 (2020-06-09)
------------------
- support STAC items (#16)
- better API documentation via response models
- update UI (`/stac/viewer`, `/cog/viewer`)
- re-order OpenAPI route tags
- update documentation

1.0.0 (2020-06-04)
------------------
- Initial release