@@ -147,9 +147,7 @@ def test_point(app):
     assert response.status_code == 200
     body = response.json()
     assert len(body["values"]) == 1
-    # value might be renamed to values
-    # https://github.com/developmentseed/cogeo-mosaic/issues/98
-    assert body["values"][0]["value"] == [9943, 9127, 9603]
+    assert body["values"][0]["values"] == [9943, 9127, 9603]
 
 
 def test_tile(app):
@@ -167,6 +165,7 @@ def test_tile(app):
         )
         assert response.status_code == 200
         assert response.headers["content-type"] == "image/png"
+        assert response.headers["X-Assets"]
         meta = parse_img(response.content)
         assert meta["width"] == meta["height"] == 256
 
